kubernetes/plant-tracker/plant-tracker.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: plant-tracker
  labels:
    app: plant-tracker
spec:
  replicas: 1
  selector:
    matchLabels:
      app: plant-tracker
  template:
    metadata:
      labels:
        app: plant-tracker
    spec:
      containers:
        - name: plant-tracker-frontend
          image: ghcr.io/reidmason/plant-tracker-frontend:edge
          imagePullPolicy: Always
          ports:
            - containerPort: 3000
        - name: plant-tracker-backend
          image: ghcr.io/reidmason/plant-tracker-backend:edge
          imagePullPolicy: Always
          ports:
            - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: plant-tracker
spec:
  selector:
    app: plant-tracker
  ports:
    - protocol: TCP
      name: api
      port: 80
      targetPort: 3000
