kubernetes/plant-tracker/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: plant-tracker
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`plant-tracker.skippythesnake.com`)
      kind: Rule
      services:
        - name: plant-tracker
          port: 80
